--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,9 @@ RoxygenNote: 7.3.1
 Imports: 
     hmer,
     lhs
+Suggests: 
+    knitr,
+    rmarkdown,
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
+VignetteBuilder: knitr
